test/success/protocol/implementation_propagation/main.sk
module Main {

struct Foo {

}

protocol Bar[T] {
    fn bar(&self) -> ()
}

impl Foo Bar[Foo] {
    fn bar(&self) -> () {

    }
}

fn generic2[T: Bar[T]](t: T) {
    t.bar();
}

fn generic[T: Bar[T]](t: T) {
    generic2(t);
}

fn main() {
    let f = Foo();
    f.bar();
    generic(f);
}

}