test/errors/traits/canonical_impl_conflict/main.sk
module Main {

struct Foo {

}

protocol P[T] {
    fn bar(&self)
}

impl P[Foo] {
    fn bar(&self) {
    }
}

impl P[Foo] {
    fn bar(&self) {
    }
}

fn main() {
    let f = Foo();
    f.bar();
}

}